Renamed galeriapardal.xml to gallery.xml